--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "serve": "docusaurus serve",
     "clear": "docusaurus clear",
     "convert": "mammoth ./converter/document.docx output.html"
-
   },
   "dependencies": {
+    "@cmfcmf/docusaurus-search-local": "^0.5.0",
     "@docusaurus/core": "2.0.0-alpha.70",
     "@docusaurus/preset-classic": "2.0.0-alpha.70",
     "@mdx-js/react": "^1.6.21",
